@@ -1,5 +1,11 @@
 2008-06-01  Guillem Jover  <guillem@debian.org>
 
+	* src/query.c: Include <dpkg-priv.h>.
+	(searchfiles): Trim trailing '/' and '/.' from file searches only
+	on path names, but not patterns.
+
+2008-06-01  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-priv.h (rtrim_slash_slashdot): Return the string size.
 
 2008-06-01  Raphael Hertzog  <hertzog@debian.org>
